# moshpit-orchestrator

./: .gitignore  README.md  pyproject.toml
moshpit/: cache.py  cli.py  config.py  dedup.py  exceptions.py  resolver.py
moshpit/ingest/: __init__.py  base.py  normalizer.py  sanitation.py  scraper.py  visual.py
moshpit/ipc/: __init__.py  engine.py  web_engine.py
tests/: __init__.py  test_cache.py  test_cli.py  test_dedup.py  test_ingest.py  test_ipc.py  test_resolver.py  test_sanitation.py
