[project]
name = "moshpit-mauler"
version = "0.1.0"
description = "Local LLM-Driven Apple Music Playlist Generator"
readme = "README.md"
authors = [
    { name = "Rogue XZ", email = "roguexz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "playwright>=1.60.0",
]

[project.scripts]
moshpit = "moshpit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moshpit"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
]
